fix minor spacing issues

--- a/src/HappyDayHistogram.css
+++ b/src/HappyDayHistogram.css
@@ -36,7 +36,8 @@
 }
 .dayHistogram .bar {
     height: 100%;
-    width: 98%;
+    width: 94%;
+    padding-left: 3%;
 }
 .dayHistogram .yAxisLabel {
     height: 100%;
